@@ -1,6 +1,7 @@
 0000-00-00:
     * version 0.8.2
     * Fix message link icons CSS
+    * Make the "remove side column" CSS work on more pages
 
 2011-10-14:
     * version 0.8.1
